# KerjaIN.ai

./: .dockerignore  .gitignore  Dockerfile  app.py  hr_users.json  indonesian_jobs.db  main.py  pyproject.toml  setup_data.py
agent/: consultant_agent.py  rag_agent.py  sql_agent.py  state.py  supervisor_agent.py
