[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kerjain-ai"
version = "0.1.0"
description = "Multi-Agent AI untuk Rekomendasi Pekerjaan & Konsultasi Karir"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.122.0",
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.0.4",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]